; ModuleID = '/home/carl/AnghaBench/vlc/modules/audio_output/extr_auhal.c_AudioDeviceHasOutput.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/audio_output/extr_auhal.c_AudioDeviceHasOutput.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AudioStreamID = common dso_local global i32 0, align 4
@kAudioDevicePropertyStreams = common dso_local global i32 0, align 4
@kAudioObjectPropertyScopeOutput = common dso_local global i32 0, align 4
@VLC_SUCCESS = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @AudioDeviceHasOutput to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @AudioDeviceHasOutput(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load i32, i32* %5, align 4
  %9 = load i32, i32* @AudioStreamID, align 4
  %10 = load i32, i32* @kAudioDevicePropertyStreams, align 4
  %11 = load i32, i32* @kAudioObjectPropertyScopeOutput, align 4
  %12 = call i32 @AO_GETPROP(i32 %8, i32 %9, i64* %6, i32* null, i32 %10, i32 %11)
  store i32 %12, i32* %7, align 4
  %13 = load i32, i32* %7, align 4
  %14 = load i32, i32* @VLC_SUCCESS, align 4
  %15 = icmp ne i32 %13, %14
  br i1 %15, label %19, label %16

16:                                               ; preds = %2
  %17 = load i64, i64* %6, align 8
  %18 = icmp eq i64 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %16, %2
  %20 = load i32, i32* @FALSE, align 4
  store i32 %20, i32* %3, align 4
  br label %23

21:                                               ; preds = %16
  %22 = load i32, i32* @TRUE, align 4
  store i32 %22, i32* %3, align 4
  br label %23

23:                                               ; preds = %21, %19
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local i32 @AO_GETPROP(i32, i32, i64*, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
